--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ body {
     width: 80%;
     padding: 20px;
     background-color: #f9f9f9;
+    height: 800px; 
+    overflow-y: auto; 
 }
 
 .items {
